fixed caption alignments

--- a/css/custom.css
+++ b/css/custom.css
@@ -305,6 +305,7 @@ video::-webkit-media-controls-start-playback-button {
 
   .text-block-43 {
     display: none;
+    width: 100%;
   }
 
   .profiletook1 {
